prestudy introductory ditty in place

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -153,7 +153,6 @@ A number of research PIM systems have demonstrated a great number of ways that u
 \section{Pre-studies: The Need and Challenge of Data Integration in PIM}
 
 %% not sure where this goes >> but i want to keep it
-
 Setting out to investigate the potential role for better support for data integration in PIM, we first sought an updated understanding of how and whether people still used multiple information sources in the course of everyday information-related activities. There were several reasons for this inquiry; first, we wondered whether people were increasingly relying only on the handful of the massive ``supersites'' (Facebook, Google, Wikipedia) for most of their activities than actually searching for distributed sources of information.  If this were the case, much of the benefit could be gained by merely integrating PIM tools with the handful of sites, rather than the substantially more challenging problem of integrating data from arbitrary information sources on the Web.  Second, if people did rely on multiple sites, we wished to know why, and the typical kinds of tasks people did that required diverse information collection - were these kinds of tasks rare?  If so, this would suggest that perhaps specialised interfaces could be concocted for this purpose rather than it being a PIM need. 
 
 The second study we performed an analysis on existing on data available from APIs and structured data feeds on the Web.  The purpose of this study was to identify the degree of technical difficulty of integrating data from these sources.   We describe our methodology below.
@@ -161,7 +160,7 @@ The second study we performed an analysis on existing on data available from API
 %% In this paper, we take the position that there is a need for a difference in focus between the approaches taken to data integration between the approaches taken in database integration and that of PIM, because of vast differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one. This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted. The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sensemaking scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would directly impact the time and effort a person has allocated for their task.  Moreover, while a fully, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
 
 \subsection{PS.1 - Understanding Data Diversity in Everyday Tasks}
-\subsubsection{Method}
+% \subsubsection{Method}
 Our pre-study investigated the types of tasks people perform online that required heterogeneous data sources, and which tools they would use to organise a large social event involving 15 or more people.  We interviewed 8 participants, using a general interview guide approach based loosely on a set of questions (see Appendix ?).  This approach allowed both the participant and interviewer a degree of freedom in conversation and each interview could adapt to the participant’s experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained so that they were knowledgeable about the importance of the study and to minimise bias.
 
 \subsubsection{Results}
