Added intro section to prestudies

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -153,10 +153,9 @@ The approaches used to match instances typically use: natural language processin
 
 \section{Pre-studies: Understanding the use and shape of personal data}
 
-% little introductory ditty about why we're doing pre-studies 
-% actually we may wish to combine discussion of both (!)
+In order to support our primary motivation to allow users to effectively consolidate and work with data from multiple sources, we performed an exploratory sequential mixed method study to help us design our contribution.  For our first pre-study we designed a semi-structured interview about which tasks and the processes people use to perform a task requiring multiple websites (see Section \ref{sec:prestudy1}).  We analysed the data collected from this study using a thematic approach.  From our first pre-study's qualitative analysis, we then designed our second pre-study which investigates the data and data formats available for people to use from popular websites (see Section \ref{sec:prestudy2}).  We performed a statistical analysis of the features of the available data.  In the next two sections, we describe our two pre-studies.
 
-\subsection{1 - Understanding Heterogeneity in Everyday Tasks}
+\subsection{1 - Understanding Heterogeneity in Everyday Tasks}\label{sec:prestudy1}
 \subsubsection{Method}
 Our pre-study investigated the types of tasks people perform online that required heterogeneous data sources, and which tools they would use to organise a large social event involving 15 or more people.  We interviewed 8 participants, using a general interview guide approach based loosely on a set of questions (see Appendix ?).  This approach allowed both the participant and interviewer a degree of freedom in conversation and each interview could adapt to the participant’s experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained so that they were knowledgeable about the importance of the study and to minimise bias.
 
@@ -176,7 +175,7 @@ When organising an event the weather was not that important because it they did 
 \subsubsection{Summary of Findings}
 People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time and did not need rushing.  Three of the participants said that they would like a recommendation system for places to eat and activities. Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment, which could be wiki based.
 
-\subsection{2 - Technical Challenges of Integrating the Data}
+\subsection{2 - Technical Challenges of Integrating the Data}\label{sec:prestudy2}
 
 The second took a look at the structured data available via popular APIs, data feeds and downloadable data sets in order to characterise and understand challenges of combining data from these sources. 
 
