--- a/chi2012.tex
+++ b/chi2012.tex
@@ -183,6 +183,7 @@ Our investigation of integration challenges started with identifying a set of da
 
 We first sought out the APIs and data feeds of popular Web services and sites that were aimed at developers creating apps for end-users.  Based on statistics collected We first selected 4 different categories 
 
+%% TODO THIS IS PLACEHOLDER DATA >> 
 \begin{table*}
 \small
 \begin{tabular}{| p{2.0cm} | p{1.5cm} | p{3.6cm} | p{2cm} | p{2cm} | l | l | l |}
@@ -198,6 +199,7 @@ weather & forecasts & wunderground, weatherbug, yahoo weather & REST (JSON/XML) 
 \end{tabular}
 \caption{\emph{PS.2 Results} - Analysis of heterogeneity present across data feeds, by category of feed} \label{tbl_tps}
 \end{table*}
+%% << 
 
 \subsubsection{Results}
 
