--- a/chi2012.tex
+++ b/chi2012.tex
@@ -160,7 +160,7 @@ The second study we performed an analysis on existing on data available from API
 %% In this paper, we take the position that there is a need for a difference in focus between the approaches taken to data integration between the approaches taken in database integration and that of PIM, because of vast differences in requirements.  In database systems, the overall objective is usually to allow multiple large databases to be accessed as if one. This requires essentially full mapping of all data types and objects and well-defined semantics concerning where and how data gets converted. The upfront costs of such complete integration are typically high, but are typically justified in the long-term, high-volume use cases imagined. In typical sensemaking scenarios of PIM, however, people might need to combine information from multiple sources for a one-off task; meaning that any upfront cost would directly impact the time and effort a person has allocated for their task.  Moreover, while a fully, uniform query capability might be nice, such capability is likely of less overall importance for a single quick task than simply being able to quickly and easily identify and cope with differences.
 
 \subsection{PS.1 - Understanding Data Diversity in Everyday Tasks}
-Our pre-study investigated the types of tasks people perform online that required heterogeneous data sources, and which tools they would use to organise a large social event involving 15 or more people.  We interviewed 8 participants, using a general interview guide approach based loosely on a set of questions (see Appendix ?).  This approach allowed both the participant and interviewer a degree of freedom in conversation and each interview could adapt to the participant’s experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained so that they were knowledgeable about the importance of the study and to minimise bias.
+Our pre-study investigated the types of tasks people perform online that required heterogeneous data sources, and which tools they would use to organise a large social event involving 15 or more people.  We interviewed 8 participants, using a general interview guide approach based loosely on a set of questions (see Appendix ?).  This approach allowed both the participant and interviewer a degree of freedom in conversation and each interview could adapt to the participant's experiences, while collecting the same general areas of information.  Each interview was recorded and notes taken, the interviewer was trained so that they were knowledgeable about the importance of the study and to minimise bias.
 
 \subsubsection{Results}
 The participant demographic consisted of 8 people, 7 of which were male and 1 female.  They were split evenly into two age groups of 18-25 and 26-32.  All but one participant reported they used social network sites very regularly (many times a day); they said they either logged in multiple times a day, left a website page open or used dedicated application for their social networking site updates.  Those that used social networking websites primarily used Facebook.  All of the participants used Twitter to listen to broadcasted tweets, and 6 out of 8 people regularly tweeted. 
@@ -171,9 +171,9 @@ All participants reported having used multiple websites to accomplish a task.  T
 \subsubsection{Question 2: Large Social Event}
 All of the participants would organise a large social event by talking to their friends, about their ideas, preferences and recommendations.  The tools they would use to acquire this information included face-to-face, phone calls, email, Skype, Facebook events.  The method chosen depended on the time scale required to organise an event, in general if there was a short time scale people would speak in person or on the phone.  Otherwise, people would set up a FaceBook event page to discuss ideas with their friends.  If their friends were not on Facebook they would email them.  All but one participant said they would not use Doddle to organise day and time of an event, because they felt that people did not fill in the form and it was more suit to organising work event not social.  
 
-Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend’s recommendations, Google maps, reviews through Googling and review sites such as tripadvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web.  One participant organised carpools informally and at last minute via Facebook or text messages.
+Most people felt that being assertive and posting their decisions about the date and time on Facebook meant that organising events were more successful than trying to gather a consensus.  They expected that their friends would voice any objections if they could not attend or like the restaurant or activity selected.   They selected venues, locations, restaurants and activities based on their own knowledge, friend's recommendations, Google maps, reviews through Googling and review sites such as tripadvisor.  People stated that the cost, price and easy to get to locations were the most important factors when choosing a venue.  They considered how to get there and looked up train or bus times on the Web.  One participant organised carpools informally and at last minute via Facebook or text messages.
 
-When organising an event the weather was not that important because it they did not trust its accuracy for events plan further in the future than one week.  Also, their friend’s preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
+When organising an event the weather was not that important because it they did not trust its accuracy for events plan further in the future than one week.  Also, their friend's preferences in price and food choices were not a priority; they would try to be inclusive but only if it meant small changes to the plan.  Choosing food and timings were often made on-the-fly, by either with the use of mobile applications or by walking past a location.
 
 \subsubsection{Summary of Findings}
 People said that they would like a website that could support the evolution of an event, that allowed them to post drafts of an event.  They felt that organising an event should be a process that changes over time and did not need rushing.  Three of the participants said that they would like a recommendation system for places to eat and activities. Another strong requirement was that it had to be ubiquitous so that everyone could use it because they wanted a single place to communicate with their friends.  While Facebook was the most popular social networking site for organising events, half of the participants felt that it was not the best solution and would prefer a collaborative environment, which could be wiki based.
@@ -221,7 +221,7 @@ Design process
 \section{Methodology}
 
 \subsection{Participants}
-We recruited 20 participants (10 female) from the University of Southampton’s international student mailing list.  All of the participants spoke English, and for 12 of them, English was not their first language, however they had all passed the university English proficiency test.  Predominately the participants were studying various levels of Computer Science, and 5 of which studied other subjects.  All of the participants had previously encountered tasks requiring them to use and evaluate data from multiple websites.
+We recruited 20 participants (10 female) from the University of Southampton's international student mailing list.  All of the participants spoke English, and for 12 of them, English was not their first language, however they had all passed the university English proficiency test.  Predominately the participants were studying various levels of Computer Science, and 5 of which studied other subjects.  All of the participants had previously encountered tasks requiring them to use and evaluate data from multiple websites.
 
 \subsection{Task Design}
 We designed a semi-structured lab-based study around four possible tasks shown in Table \ref{tab:studyfactors}.  The tasks were to select a restaurant for an event or university at which to study, out of six possible choices. We selected a shortlist of six because it is typical for users to narrow down their options to a limited selection before analysing the details of their final choices. The shortlist of universities and restaurants were taken from the top six ranked from the Complete University Guide (for task 1 and 2), Tripadvisor (for task 3) and Yelp (for task 4).  The top six were chosen from these websites because they provide a realistic shortlist and are comparable in terms of rankings and properties. The web sites used as data sources were chosen because they are the most popular and contain comparable statistics for universities and restaurants.
@@ -252,13 +252,13 @@ Each task had an A and B condition.  The A condition, the participant could only
 Each study consisted of two tasks, one A and one B condition.  Each participant was given 10 minutes to complete a task.  In order to select which tasks the participant was given, we used a latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute WebBox tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
 
 \subsection{Data Collection}
-Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study’s protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant’s actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.
+Each study was overseen by a facilitator and an observer:  the role of the facilitator was to explain the study's protocol to the participant and to answer any questions; and the role of the observer was to observe without interacting with the user, and to take notes.  During the lab study, we recorded the audio and the participant's actions on screen. We asked the participants to speak out loud their thought process and what they were looking at, so that we could evaluate their reasoning behind their processes.
 
-The studies lasted 40 minutes, on average.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn’t influence the study.  The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies’ data and to revisit protocols, if necessary.
+The studies lasted 40 minutes, on average.  Both the facilitator and observer were trained on the purpose of the study, their role and how they could and couldn't influence the study.  The studies were run over 4 days.  At the end of each day the facilitators and observers met to discuss the studies' data and to revisit protocols, if necessary.
 
 \subsection{Data Analysis}
 
-During the data collection we collated a spreadsheet summarising the participant’s gender, typical daily computer usage, the tasks allocated and basic actions performed during the task.  After we had collected the study’s data, we performed our data analysis. 
+During the data collection we collated a spreadsheet summarising the participant's gender, typical daily computer usage, the tasks allocated and basic actions performed during the task.  After we had collected the study's data, we performed our data analysis. 
 
 TODO look further into types of data analysis....
 
@@ -339,10 +339,10 @@ often pointing to the screens to show and verify each choice as they explained t
 
 %What we found 
 %
-%What we didn’t find (evidence for)
+%What we didn't find (evidence for)
 %
 %What we might look at next -- follow-on work
-%		We focused on terminological heterogeneity -- didn’t address structural heterogeneity, semantic heterogeneity
+%		We focused on terminological heterogeneity -- didn't address structural heterogeneity, semantic heterogeneity
 %		We focused on finite (small) sets Streaming data (how do select future data --) 
 %		Scale - small data, what are the facilites required for large data
 %		Collaborative - how might interaction support multiple users collaborating?
