fix double quotes

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -310,8 +310,8 @@ of this technique is that the users instantly filled their screen, and ran out o
 %% more from doc here
 
 % weird and wonderful
-A number of users admittedly introduced their own bias into the choices: "I prefer Indian food, so I will choose the Indian
-restaurant", and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating
+A number of users admittedly introduced their own bias into the choices: ``I prefer Indian food, so I will choose the Indian
+restaurant'', and one participant spent time on Google Maps looking at the routes to each restaurant, and eliminating
 those that required bus transfers (the protocol did not mention routing/transfers at all).
 
 
@@ -331,7 +331,7 @@ of these next to the set of choices. They then made their choice based on the va
 Two contrasting approaches that participants followed was to use the data to rule out candidates, or to use the data to
 directly compare candidates at once. Our pool of participants exhibited both behaviours evenly, however in the condition
 when using the WebBox interface, significantly more comparison (and visualisation of values) was performed, with fewer
-participants using the "ruling out" process. A consequence of this was that when asked to justify their choices, users were
+participants using the ``ruling out'' process. A consequence of this was that when asked to justify their choices, users were
 able to verify their values on-screen immediately, whereas those who had ruled-out had to memorise their reasons, with
 mixed success  -- many participants had to look through the data sources to re-find the reasons why they has ruled out some choices.
 Therefore, the uses that were using WebBox were more confident in their choices, and knew exactly why they had chosen them,
