Adding images into document

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -219,6 +219,31 @@ Interaction features
 
 Design process
 
+\begin{figure*}[htbp]
+\begin{center}
+\includegraphics[width=18cm]{img/dragdrop}
+\caption{WebBox uses a Drag and Drop interface to add data into the workspace.}
+\label{fig:dragdrop}
+\end{center}
+\end{figure*}
+
+\begin{figure}[htbp]
+\begin{center}
+\includegraphics[width=8cm]{img/multipathing}
+\caption{To see properties, users click on the name of the property. When instances do not have a particular property, additional property names can be added.}
+\label{fig:multipathing}
+\end{center}
+\end{figure}
+
+\begin{figure*}[htbp]
+\begin{center}
+\includegraphics[width=18cm]{img/sameas}
+\caption{When two instances represent the same entity, users can drag one on top of the other, and they are combined.}
+\label{fig:sameas}
+\end{center}
+\end{figure*}
+
+
 \section{Methodology}
 
 \subsection{Participants}
