--- a/chi2012.tex
+++ b/chi2012.tex
@@ -190,18 +190,21 @@ People said that they would like a website that could support the evolution of a
 source category  & data type & sources & API type & avg fields/rec & avg depth & term. het & struc. het \\
 \hline
 social networking  & person's profile & Facebook, LinkedIn, Google+ & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
-event calendars & events & eventbrit, gcal  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
-retail (shopping)  & product profile & Amazon, shopping.com, Etsy, Groupon, Zappos  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
-music catalogues & songs and albums & echonest, rdio, soundcloud, spotify  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
-weather & forecasts & wunderground, weatherbug, yahoo weather & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
+event calendars & events & Eventbrite, Google Calendar  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
+retail (shopping)  & product profile & Amazon, Shopping.com, Etsy, Groupon, Zappos  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
+music catalogues & songs and albums & Echonest, rdio, Soundcloud, Spotify  & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
+weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML) & 10 & 1.2 & 0.90 & 0.10 \\
 \hline
 \end{tabular}
+\label{tbl:prestudy2}
 \caption{\emph{PS.2 Results} - Analysis of heterogeneity present across data feeds, by category of feed} \label{tbl_tps}
 \end{table*}
 %% << 
 
-\subsection{PS.2 - Technical Challenges of Integrating the Data}
-Our investigation of integration challenges started with identifying a set of data sources to analyze.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} and looked at the 50 most popular data feeds, based upon number of developer API keys issued for each.  In order to get a variety of different kinds of sources represented, based upon available choices, we first chose 5 feed \emph{categories}: social networks (people), retail (shopping), events (calendar events, happenings, etc), music, and weather.   Then, we populated each category with the most popular feeds from the list, and took samples of data records from each.
+\subsection{PS.2 - Technical Challenges Data Integration}
+Our investigation of integration challenges started with identifying a set of candidate data sources for analysis.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  In order to get a variety of different kinds of sources represented, we first categorised feeds into 5 topic categories: social networks (people), retail (shopping), events (calendar events, happenings, etc), music, and weather. We then populated each category with 2-5 feeds each depending on feed availability, for a total of 15 total feeds.  
+
+For each feed, 3-5 data records were obtained by querying the API directly for records of a that category's primary \emph{corresponding type}, listed in the second colum of Table \ref{tbl:prestudy2}; that is, while many of the APIs also provided access to other kinds of data; for example, \url{shopping.com} offers programmatic access to ``offers'' in addition to particular product descriptions, Amazon offers access to the shopper's profile, etc, but only product records were obtained for 
 
 \subsubsection{Results}
 
