--- a/chi2012.tex
+++ b/chi2012.tex
@@ -205,7 +205,7 @@ weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our investigation of integration challenges started with identifying a set of candidate data sources for analysis.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  In order to get a variety of different kinds of sources represented, we first categorised feeds into 5 topic categories: social networks (people), retail (shopping), events (calendar events, happenings, etc), music, and weather. We then populated each category with 2-5 feeds each depending on feed availability, for a total of 15 total feeds.  
 
-For each feed, 3-5 data records were obtained by querying the API directly for records of a that category's primary \emph{corresponding type}, listed in the second colum of Table \ref{tbl:prestudy2}. For example, while many of the APIs also provided access to other kinds of data, ranging from reviews to customer profilesonly product records were obtained for this category.  Once data records were obtained, simple complexity metrics were computed individually, followed by pairwise heterogeneity metrics.  
+For each feed, 3-5 data records were obtained by querying the API directly for records of a that category's primary \emph{corresponding type}, listed in the second colum of Table \ref{tbl:prestudy2}. For example, while many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type (product records) were obtained for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics.  Since, due to optional fields,  individual records could vary in the number of fields.  An alternative approach to using instance documents that we considered was to directly compare API schema definitions
 
 The per-source metrics were as follows:
 \begin{itemize}
@@ -213,13 +213,12 @@ The per-source metrics were as follows:
 \item \emph{Average Depth of record} - Average depth of data record (number of subproperties in self-contained record). In JSON/XML representations which have tree representations, this would reflect the number of levels in the tree; for ``infinite'' relational representations (such as RDF with external links) this is merely the number of embedded entity definitions returned by a top-level query.
 \end{itemize}
 
-Heterogeneity was measured through \emph{pairwise consistency metrics} along the 
+Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from the 
 \begin{itemize}
 \item \emph{Terminological consistency} - 
 \item \emph{Structural consistency} - 
 \item \emph{Semantic/Model consistency} - 
 \end{itemize}
-
 
 \subsubsection{Results}
 
