added subsections to discussion

--- a/chi2012.tex
+++ b/chi2012.tex
@@ -368,7 +368,29 @@ In the exit survey, the users noted that they would use WebBox for finding a pro
 
 \section{Discussion}
 
-% processes
+\subsection{Better Supporting the Task}
+
+- are people more thorough
+- do they evaluate more sources
+
+\subsection{Causing Less Frustration}
+
+- Gave up with aspects of the tasks later / not at all
+- With websites, users gave up on websites and moved on early
+
+\subsection{Keeping an Open Mind}
+
+- Did users rule out choices less/later
+- Did that mean they chose "better" options
+
+\subsection{What method did people use?}
+
+- Processes
+- Organisation of data/screen
+- A vs B, how are they different?
+
+
+% DAN's  qual analysis of processes
 
 In order to complete the tasks, the users followed a number of different processes. The most common process followed
 was {\it collation} of data, either on-screen or on paper. Some users were proficient enough to copy and paste data
