--- a/carpedata.bib
+++ b/carpedata.bib
@@ -242,4 +242,8 @@ time,...}},
  address = {Piscataway, NJ, USA},
  keywords = {Semantic Web, Semantic Web, semantic networks, standards, e-science, Web services, Web services, e-science, semantic networks, standards},
 } 
+@article{george2005understanding,
+  title={Understanding structural and semantic heterogeneity in the context of database schema integration},
+  author={George, D. and Preston, UK}
+}
 
