--- a/chi2012.tex
+++ b/chi2012.tex
@@ -205,19 +205,20 @@ weather & forecasts & W.Underground, Weatherbug, Yahoo! Weather & REST (JSON/XML
 \subsection{PS.2 - Technical Challenges of Data Integration}
 Our investigation of integration challenges started with identifying a set of candidate data sources for analysis.  For this, we consulted the ProgrammableWeb API directory\footnote{ProgrammableWeb - \url{http://www.programmableweb.com/apis/directory}} of 50 most popular data feeds measured by the number of developer API keys issued for each.  In order to get a variety of different kinds of sources represented, we first categorised feeds into 5 topic categories: social networks (people), retail (shopping), events (calendar events, happenings, etc), music, and weather. We then populated each category with 2-5 feeds each depending on feed availability, for a total of 15 total feeds.  
 
-For each feed, 3-5 data records were obtained by querying the API directly for records of a that category's primary \emph{corresponding type}, listed in the second colum of Table \ref{tbl:prestudy2}. For example, while many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type (product records) were obtained for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics.  Since, due to optional fields,  individual records could vary in the number of fields.  An alternative approach to using instance documents that we considered was to directly compare API schema definitions
+For each feed, 3-5 data records were obtained by querying the API directly for records using popular key terms for each category's primary \emph{corresponding type}, listed in the second colum of Table \ref{tbl:prestudy2}. While many of the APIs also provided access to other kinds of data, such as customer reviews, only the primary type (product records) were obtained for the \emph{shopping} category.  Once data records were obtained, two complexity metrics were computed for each, followed by pairwise heterogeneity metrics.  Since, due to optional fields,  individual records could vary in the number of fields.  An alternative approach to using instance documents was to directly compare schema definitions directly; however, this approach was abandoned after an initial investigation revealed two problems with schema analysis.  First, many of the sites' schema documentation was not actually publicly available; second, that many of the schemas were not actually representative of typical data returned by the service. For example, the schema documentation for \emph{shopping.com} listed full product attribute properties, but none of the records actually returned for the products we queried contained such attributes. 
 
 The per-source metrics were as follows:
 \begin{itemize}
 \item \emph{Average Width of record} - Average number of properties per record.
-\item \emph{Average Depth of record} - Average depth of data record (number of subproperties in self-contained record). In JSON/XML representations which have tree representations, this would reflect the number of levels in the tree; for ``infinite'' relational representations (such as RDF with external links) this is merely the number of embedded entity definitions returned by a top-level query.
+\item \emph{Average Depth of record} - Average depth of data record (number of subproperties in self-contained record). (In JSON/XML representations, this is the tree depth; for RDF  representations this is merely the number of embedded entity resource definitions included in the top-level query).
 \end{itemize}
 
-Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from the 
+Heterogeneity was measured through \emph{pairwise consistency metrics} we derived from paper on data heterogeneity \cite{george2005understanding}, that reflected the kinds of differences present in each set. These metrics are measured in a pairwies manner between sources and averaged :
 \begin{itemize}
-\item \emph{Terminological consistency} - 
-\item \emph{Structural consistency} - 
-\item \emph{Semantic/Model consistency} - 
+\item \emph{Terminological consistency} - Percentage of property names that match among schemas
+\item \emph{Structural consistency} - Percent of properties that have the same structural shape
+\item \emph{Semantic/Model consistency} - Percentage of entities/concepts that match corerspondences 
+\item \emph{Value consistency} - Percentage of values represente in the same way 
 \end{itemize}
 
 \subsubsection{Results}
